feat: add self-hosted swagger ui
